# driver

./: .coverage  .dockerignore  .gitignore  README.md  alembic.ini  coverage.xml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: test-coverage.yml  version-bump.yml
alembic/: env.py
alembic/versions/: 3395b38a04ca_create_jobs_table.py  5a755d00c78c_initial_migration.py  862c4c452b43_drop_item_metadata_suggestions_column.py  aa7f2c9d4b31_add_rule_organize_actions.py  b1d4b8f3c2a1_add_app_settings_table.py  c4a6f8f1d2e3_add_metadata_plugins_and_locked_fields.py  e1f7a2c9d4b1_reconcile_plugin_schema_after_c4.py
backend/: Dockerfile  main.py  security.py
backend/api/: dependencies.py
backend/core/: config.py  security.py
backend/db/: models.py  session.py
backend/schemas/: admin.py  ai.py  drive.py  jobs.py  metadata.py
backend/services/: ai.py  app_settings.py  comics.py  (+15 more)
docs/: README.md  endpoints.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  vite.config.js
frontend-app/: index.html  package.json
output/: figma.html
scripts/: capture_readme_screenshots.py  dev.py  install_redis_windows.ps1  migrate_sqlite_to_supabase.py  migrate_to_supabase.ps1  run_coverage.py  run_worker.ps1  start-workers.ps1  verify_sync.py
src/: .dockerignore  alembic.ini
tests/: README.md  test_ai_service.py  test_arq_worker.py  test_comics_extraction_fallback.py  test_daily_sync_scheduler.py  test_jobs_queue.py  test_jobs_service.py  test_metadata_delete_category.py  test_metadata_inline_update.py  test_metadata_job.py  test_sync_job.py
(+503 files in other folders)
